--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="CollageProject_1">
+    <wb-module deploy-name="CollageProject">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="CollageProject_1"/>
-        <property name="java-output-path" value="/CollageProject_1/build/classes"/>
+        <property name="java-output-path" value="/CollageProject/build/classes"/>
+        <property name="context-root" value="CollageProject"/>
     </wb-module>
 </project-modules>
